Finally solve the issue with code highlighting, also added text-align property via text editor in BO.

--- a/src/assets/styles/article.less
+++ b/src/assets/styles/article.less
@@ -68,5 +68,13 @@
   }
 }
 
+.align-right {
+  text-align: right;
+}
+
+.align-center {
+  text-align: center;
+}
+
 .responsive(@tablet, { .article-content {
 } });
